# artilect

./: .gitignore  Cargo.toml  Dioxus.toml.backup  NOTICE  README.md  deploy.sh  rust-toolchain.toml  rustfmt.toml
actuators/chat/: .gitignore  Cargo.toml  Dockerfile
actuators/chat-front/: Cargo.toml  Dioxus.toml  Dockerfile
actuators/chat-front/src/: main.rs  style.css
actuators/chat/back/: Cargo.toml
actuators/chat/back/src/: components.rs  handlers.rs  lib.rs  main.rs  models.rs  openai.rs  state.rs
actuators/chat/back/src/components/: message_log.rs
actuators/chat/dto/: Cargo.toml
actuators/chat/dto/src/: lib.rs
actuators/chat/front/: Cargo.toml  run-release.sh
actuators/chat/front/src/: api.rs  components.rs  main.rs  state.rs  style.css
actuators/chat/front/src/components/: chat.css  chat.rs  chat_message.css  chat_message.rs  layout.css  layout.rs  sidebar_thread_link.rs
actuators/chat/front/src/state/: actions.rs
actuators/chat/macros/: Cargo.toml
actuators/chat/macros/src/: lib.rs
actuators/chat/src/: main.rs
auth/back/: Cargo.toml
auth/dto/: Cargo.toml
auth/front/: Cargo.toml  Dioxus.toml
db/: migrate.sh
db/migrations/: V1__initial_schema.sql  V2__message_and_index_updates.sql  V3__message_thread_not_null.sql  V4__thread_metadata.sql  V5__remove_owner_id_default.sql  V6__nullable_message_user.sql  V7__accounts_table.sql
exec/: chat-back.sh  chat-front-web.sh
infer/config/: nginx.conf.template
infer/lib/: Cargo.toml  rust-toolchain.toml
infer/lib/src/: element_constructors.rs  error.rs  lib.rs  openai.rs  parsing.rs  system_prompt.rs
infer/lib/src/components/: system_prompt.rs
infer/macros/: Cargo.toml
infer/macros/src/: lib.rs
infer/placeholder/: Dockerfile
infer/placeholder/config/: init-nginx-conf.sh
k8s/chat-front/: deployment.yaml
k8s/chat/back/: deployment.yaml
k8s/db/: configmap.yaml  deployment.yaml  migrations.yaml  secret.yaml
k8s/infer/: configmap.yaml  deployment.yaml
k8s/web-chat/: deployment.yaml
k8s/web-chat-fe/: deployment.yaml
macro/: Cargo.toml
macro/src/: lib.rs
sensors-actuators/web-chat/: Cargo.toml  Dockerfile
sensors-actuators/web-chat-fe/: Cargo.toml  Dioxus.toml  Dockerfile
sensors-actuators/web-chat-fe/src/: main.rs
sensors-actuators/web-chat/src/: handlers.rs  main.rs
services/: Cargo.toml
services/src/: lib.rs
src/: actuators.rs  auth.rs  config.rs  infer.rs  lib.rs  prompts.rs  service.rs
src/actuators/: chat.rs
src/actuators/chat/: back.rs  dto.rs  front.rs
src/actuators/chat/back/: actor.rs  client.rs  handlers.rs  prompts.rs
src/actuators/chat/back/client/: local.rs  remote.rs
src/actuators/chat/back/components/: message_log.rs
src/actuators/chat/back/prompts/: message_log.rs
src/actuators/chat/front/: Dockerfile  api.rs  state.rs
src/actuators/chat/front/components/: chat.css  chat.rs  chat_message.css  chat_message.rs  layout.css  layout.rs  sidebar_thread_link.rs
src/actuators/chat/front/state/: actions.rs
src/auth/: back.rs  dto.rs  front.rs
src/config/: back_shared.rs
src/infer/: components.rs  config.rs  element_constructors.rs  error.rs  openai.rs  parsing.rs  util.rs
src/infer/components/: system_prompt.rs
src/prompts/: system.rs  util.rs
