[workspace]
members = [
    "auth/back",
    "auth/front",
    "auth/dto",
    "actuators/chat/back",
    "actuators/chat/front",
    "actuators/chat/dto",
    "actuators/chat/macros",
    "infer/lib",
    "infer/macros",
    "services",
]
resolver = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.dependencies]
dioxus = "0.6"
dioxus-web = "0.6"
dioxus-ssr = "0.6"
dioxus-html = "0.6"
dioxus-core = "0.6"
dioxus-core-macro = "0.6"
dioxus-html-internal-macro = "0.6"
classnames = "2.1"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
futures-util = "0.3"
dioxus-logger = "0.6"
dotenvy_macro = "0.15"
getrandom = "0.2"
tao = "0.30"
uuid = "1.13"
time = "0.3"
oauth2 = "5.0"
axum = "0.8"
axum-macros = "0.5"
axum-extra = "0.10"
http = "1.2"
headers = "0.4"
tokio = "1.43"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
async-openai = "0.17"
dotenvy = "0.15"
sqlx = "0.8"
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "1.0" }
xmltree = "0.11"
thiserror = "2.0"
actix = "0.13.5"
