[workspace]
members = [
    "macro",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
authors = ["Igor Novikov <septagramm@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
keywords = ["ai", "agents", "llm", "chat"]

[package]
name = "artilect"
version = "0.1.0"
# default-run = "artilect"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[features]
backend = [
    "dep:sqlx",
    "dep:actix",
    "dep:tokio",
]
server-http2 = [
    "backend",
    "dep:axum",
    "dep:axum-macros",
    "dep:axum-extra",
    "dep:http",
    "dep:headers",
    "dep:tower-http",
]
client = []
client-http2 = ["client", "dep:reqwest"]
frontend = [
    "dioxus",
    "dioxus/router",
    "client-http2",
    "dep:classnames",
    "dep:futures-util",
    "dep:dotenvy_macro",
    "time/wasm-bindgen",
]
infer = [
    "dep:markup",
    "dep:indoc",
    "dep:regex",
    "dep:reqwest",
    "dep:tokio",
    "dep:serde_yaml",
    "dep:textwrap",
]
auth-in = ["backend"]
auth-out = ["client-http2"]
auth-front = ["frontend"]
chat-in = ["backend", "infer"]
chat-out = ["client-http2"]
chat-front = ["frontend"]

web = ["dioxus/web"]
desktop = ["dioxus/desktop", "tao"]
mobile = ["dioxus/mobile"]

[dependencies]
artilect-macro = { path = "macro" }
ouroboros = { version = "0.18" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.13", features = ["v4", "serde", "js", "fast-rng"] }
time = { version = "0.3", features = [
    "serde",
    "parsing",
    "formatting",
    "local-offset",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
dotenvy = { version = "0.15" }
once_cell = { version = "1.21" }
anyhow = { version = "1.0" }
thiserror = { version = "2.0" }

tokio = { version = "1.43", features = ["full"], optional = true }
actix = { version = "0.13", optional = true }
dioxus = { version = "0.6", optional = true }
futures-util = { version = "0.3", optional = true }
classnames = { version = "2.1", optional = true }
markup = { version = "0.15", optional = true }
indoc = { version = "2.0", optional = true }
# getrandom = { version = "0.2", optional = true, features = ["js"] }
serde_yaml = { version = "0.9", optional = true }
textwrap = { version = "0.16", features = ["terminal_size"], optional = true }
regex = { version = "1.11", optional = true }
reqwest = { version = "0.12", optional = true, features = ["json"] }
dotenvy_macro = { version = "0.15", optional = true }
tao = { version = "0.30", optional = true }
axum = { version = "0.8", optional = true }
axum-macros = { version = "0.5", optional = true }
axum-extra = { version = "0.10", optional = true, features = ["typed-header"] }
http = { version = "1.2", optional = true }
headers = { version = "0.4", optional = true }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
async-openai = { version = "0.17", optional = true }
sqlx = { version = "0.8", optional = true, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
