[package]
name = "infer"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["macro"] }
dioxus-ssr = { workspace = true }
dioxus-html = { workspace = true }
dioxus-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-html-internal-macro = { workspace = true }
xmltree = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
thiserror = { workspace = true }
infer-macros = { path = "../macros" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
