[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chat-dto = { path = "../dto", features = ["backend"] }
infer-lib = { path = "../../../infer/lib" }

axum = "0.7"
axum-macros = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-openai = "0.17"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time"] }
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
time = { version = "0.3", features = ["local-offset"] }
