[package]
name = "chat-back"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "src/main.rs"
features = ["microservice"]

[features]
microservice = ["services/auth-out"]

[dependencies]
# auth-dto = { path = "../../../auth/dto", features = ["frontend"] }
chat-dto = { path = "../dto", features = ["backend"] }
infer = { path = "../../../infer/lib" }
services = { path = "../../../services" }

dioxus = { workspace = true, features = ["macro"] }
dioxus-html-internal-macro = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
http = { workspace = true }
headers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-openai = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
time = { workspace = true, features = ["local-offset"] }
actix = { workspace = true }
