[package]
name = "chat-dto"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }

[features]
frontend = []
backend = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "uuid", "time"]
optional = true
