[package]
name = "chat-dto"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["serde"] }
chat-macros = { path = "../macros", optional = true }

[features]
frontend = ["chat-macros"]
backend = ["dep:sqlx"]

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "postgres", "uuid", "time"]
optional = true
