[package]
name = "chat-front"
version = "0.1.0"
authors = ["Igor Novikov <septagramm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
dioxus-web = { version = "0.6" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
futures-util = "0.3"
dioxus-logger = "0.6"
dotenvy_macro = "0.15"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
