[package]
name = "chat-front"
version = "0.1.0"
authors = ["Igor Novikov <septagramm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-dto = { path = "../dto", features = ["frontend"] }
dioxus = { version = "0.6", features = ["router"] }
dioxus-web = { version = "0.6" }
classnames = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
futures-util = "0.3"
dioxus-logger = "0.6"
dotenvy_macro = "0.15"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
time = { version = "0.3", features = ["wasm-bindgen", "serde", "parsing", "formatting"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
