[package]
name = "chat-front"
version = "0.1.0"
authors = ["Igor Novikov <septagramm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-dto = { path = "../dto", features = ["frontend"] }
dioxus = { workspace = true, features = ["router"] }
dioxus-web = { workspace = true }
classnames = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
futures-util = { workspace = true }
dioxus-logger = { workspace = true }
dotenvy_macro = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
tao = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde", "js"] }
time = { workspace = true, features = ["wasm-bindgen", "serde", "parsing", "formatting"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "tao"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
